# cli-seggwat

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish-crate.yml  release.yml
.skills/seggwat-cli/: SKILL.md
src/: auth.rs  cli.rs  client.rs  error.rs  main.rs  models.rs  output.rs
src/commands/: auth.rs  feedback.rs  mod.rs  project.rs  rating.rs
src/tui/: mod.rs  ui.rs
