[package]
name = "seggwat-cli"
version = "0.17.1"
edition = "2024"
authors = ["Hauke Jung <mail@haukejung.de>"]
license = "MIT"
description = "CLI for the SeggWat feedback platform — manage feedback, projects, and ratings from the terminal"
repository = "https://github.com/hauju/seggwat-cli"
homepage = "https://seggwat.com"
readme = "README.md"
keywords = ["feedback", "cli", "saas", "nps", "rating"]
categories = ["command-line-utilities", "web-programming"]

[[bin]]
name = "seggwat"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "net", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "json"] }
anyhow = "1.0"
comfy-table = "7"
chrono = { version = "0.4", default-features = false, features = ["std", "now"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.9"
open = "5"
urlencoding = "2"

[profile.release]
codegen-units = 1
